--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,15 @@
 <app-header></app-header>
 <main>
     <ul id="users">
-        <li>
-            <app-user [id]="users[0].id" [avatar]="users[0].avatar" [name]="users[0].name" (utenteCliccato)="utenteSelezionato($event)"></app-user>
-        </li>
-        <li>
-            <app-user [id]="users[1].id" [avatar]="users[1].avatar" [name]="users[1].name" (utenteCliccato)="utenteSelezionato($event)"></app-user>
-        </li>
-        <li>
-            <app-user [id]="users[2].id" [avatar]="users[2].avatar" [name]="users[2].name" (utenteCliccato)="utenteSelezionato($event)"></app-user>
-        </li>
-        <li>
-            <app-user [id]="users[3].id" [avatar]="users[3].avatar" [name]="users[3].name" (utenteCliccato)="utenteSelezionato($event)"></app-user>
-        </li>
+        @for ( user of users; track user.id ){ 
+            <li>
+                <app-user [selezionato]="user.id === utenteSelezionatoId" [user]="user" (utenteCliccato)="utenteSelezionatoClick($event)"></app-user>
+            </li>
+        }
     </ul>
-    <app-tasks [name]="nomeUtenteSelezionato.name"></app-tasks>
+    @if (utenteSelezionato){
+        <app-tasks [name]="utenteSelezionato.name" [userId]="utenteSelezionato.id"></app-tasks>
+    } @else {
+        <p id="fallback">Non hai ancora selezionato nessun utente</p>
+    }
 </main>
