--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,1 +1,20 @@
-<p>Il nome dell'utente selezionato è: {{name}}</p>
+<section id="tasks">
+    <header> 
+        <h2 id="fallback">Task di {{name}}</h2>
+        <menu>
+            <button>
+                Aggiungi Task
+            </button>
+        </menu>
+    </header>
+
+    <ul>
+        @for( task of taskUtenteSelezionato; track task.id){
+            <li>
+              <app-single-task [task]="task" (completato)="onCompleteTask($event)"></app-single-task>
+            </li>
+        }
+    </ul>
+</section>
+
+
