--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
     <img src="../../assets/task-management-logo.png" alt="logo png">
     <h1>EasyTask</h1>
-    <p>Enterprise-level task management whitout friction</p>
+    <p>Enterprise-level task management whitout ciao  friction</p>
 </header>
